--- a/styles/sass/_contactMe.scss
+++ b/styles/sass/_contactMe.scss
@@ -75,6 +75,7 @@
         font-family: $fontText;
         text-align: center;
         line-height: 2;
+        color:$colorNavy;
     }
     input:focus,
     textarea:focus {
@@ -243,11 +244,11 @@
     }
 }
 
-@media (max-width: 406px) {
+@media (max-width: 414px) {
     .contactSection {
         .contactText {
             & > p {
-                margin: 5px 0;
+                margin: 2px 0;
                 line-height: 1.3;
             }
         }
@@ -263,8 +264,9 @@
         ul {
           display:flex;
           justify-content: space-evenly;
+          padding-left: 5px;
          li {
-             width: 50px;
+             width: 40px;
          }
       }
     }
